fix visibility

--- a/src/scss/reviews.scss
+++ b/src/scss/reviews.scss
@@ -5,7 +5,7 @@
 .reviews {
   width: 320px;
   margin: 0 auto;
-  overflow: visible;
+  overflow: hidden;
 
   @media screen and (min-width: 1200px) {
     width: 1200px;
